force-app/main/default/objects/APT_Line_Item_Rate_Card__c/APT_Line_Item_Rate_Card__c.object-meta.xml
<CustomObject>
    <label>Line Item Rate Card</label>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Line Item Rate Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>