force-app/main/default/objects/APT_Line_Item_Rate_Card__c/fields/APT_Proposal__c.field-meta.xml
<CustomField>
    <fullName>APT_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Line Item Rate Cards (Proposal)</relationshipLabel>
    <relationshipName>Line_Item_Rate_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>