force-app/main/default/objects/APT_Line_Item_Rate_Card__c/fields/APT_Proposal_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>APT_Proposal_Line_Item__c</fullName>
    <label>Proposal Line Item</label>
    <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
    <relationshipLabel>Line Item Rate Cards</relationshipLabel>
    <relationshipName>Line_Item_Rate_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>