force-app/main/default/objects/APT_Line_Item_Rate_Card__c/fields/APT_Text_to_display__c.field-meta.xml
<CustomField>
    <fullName>APT_Text_to_display__c</fullName>
    <formula>IF( APT_Value_1__c = &quot;OTC&quot; ,&quot;Post Billpay &quot;, IF( APT_Value_1__c = &quot;Phone&quot; ,&quot;Post Billpay by &quot;,IF( APT_Value_1__c = &quot;Internet&quot; ,&quot;Post Billpay on the &quot;,IF( APT_Value_1__c = &quot;Scan and Pay&quot; ,&quot;Post Billpay &quot;,Null))))</formula>
    <label>Text to display</label>
    <type>Text</type>
</CustomField>