force-app/main/default/objects/APT_Line_Item_Rate_Card__c/fields/APT_Value_22__c.field-meta.xml
<CustomField>
    <fullName>APT_Value_22__c</fullName>
    <label>Value 22</label>
    <length>255</length>
    <type>Text</type>
</CustomField>